# MorskiSmetar

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
include/: igraj_od_prej.h  level.h  level_client.h  level_streznik.h  moji_objekti.h  okvir.h  replay.h  tocke.h  zacetna.h
src/: cekin.cpp  crnc.cpp  greta.cpp  igraj_od_prej.cpp  jasek.cpp  jud.cpp  ladja.cpp  level.cpp  level_client.cpp  level_streznik.cpp  main.cpp  replay.cpp  smece.cpp  test.cpp  tocke.cpp  vegovec.cpp  vegovec2.cpp  zacetna.cpp
src/Scene/: IzbiraSlota.h  Zacetna.h
sredstva/: jasek.aseprite  podatki_o_igralcih.txt  replay.ms
